memo/memo-with-references/tests/2-explicit-lifetime-required.rs
use memo_with_references::memo;

#[memo(cache)]
fn memome(cache: &str) {}

fn main() {}
